--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Three JS Playground</title>
 </head>
 <body>
-  <script src="/js/three.js"></script>
-  <script src="/js/OrbitControls.js"></script>
-  <script src="/js/FBXLoader.js"></script>
+  <script src="./js/three.js"></script>
+  <script src="./js/OrbitControls.js"></script>
+  <script src="./js/FBXLoader.js"></script>
   <!-- <script src="js/three-orbit-controls.js"></script> -->
   <script>
     var scene = new THREE.Scene();
