fixed the path again

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>Three JS Playground</title>
 </head>
 <body>
-  <script src="/js/three.js"></script>
-  <script src="/js/OrbitControls.js"></script>
-  <script src="/js/FBXLoader.js"></script>
-  <script src="/js/WebVR.js"></script>
+  <script src="js/three.js"></script>
+  <script src="js/OrbitControls.js"></script>
+  <script src="js/FBXLoader.js"></script>
+  <script src="js/WebVR.js"></script>
   <!-- <script src="js/three-orbit-controls.js"></script> -->
   <script>
     
